[gd_scene load_steps=2 format=3 uid="uid://cp7k3mqykk2kv"]

[ext_resource type="Script" path="res://prog_52b.gd" id="1_8hhik"]

[node name="prog_54b" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 110.0
offset_top = 97.0
offset_right = 110.0
offset_bottom = 97.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8hhik")

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 248.0
offset_top = -8.0
offset_right = 315.063
offset_bottom = 23.0
scale = Vector2(1.01163, 1)

[node name="LineEdit2" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 250.0
offset_top = 31.0
offset_right = 317.063
offset_bottom = 62.0

[node name="LineEdit3" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 250.0
offset_top = 75.0
offset_right = 317.063
offset_bottom = 106.0

[node name="LineEdit4" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 250.0
offset_top = 119.0
offset_right = 317.063
offset_bottom = 150.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = -28.0
offset_top = 6.0
offset_right = 190.0
offset_bottom = 32.0
scale = Vector2(1.05217, 3.55478)
text = "Enter four three-digit values"

[node name="sum" type="Label" parent="."]
layout_mode = 0
offset_left = 42.0
offset_top = 171.0
offset_right = 174.0
offset_bottom = 197.0
scale = Vector2(2.66924, 2.2365)
text = "-"

[node name="avr" type="Label" parent="."]
layout_mode = 0
offset_left = 43.0
offset_top = 230.0
offset_right = 175.0
offset_bottom = 256.0
scale = Vector2(2.77093, 2.39625)
text = "-"

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 33.0
offset_top = 325.0
offset_right = 113.0
offset_bottom = 356.0
scale = Vector2(2.29113, 2.6262)
text = "Calculate"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 243.0
offset_top = 324.0
offset_right = 323.0
offset_bottom = 355.0
scale = Vector2(2.25955, 2.53422)
text = "Clear"

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 459.0
offset_top = 325.0
offset_right = 539.0
offset_bottom = 356.0
scale = Vector2(2.29113, 2.6262)
text = "Exit"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
